<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/to_text"/>
    <EditText
            android:id="@+id/to_edit_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dip"
            android:hint="@string/to_text"
            android:inputType="textEmailAddress"/>
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/message_text"/>
    <EditText
            android:id="@+id/message_edit_text"
            android:layout_height="120dip"
            android:layout_width="match_parent"
            android:lines="10"
            android:padding="5dip"
            android:hint="@string/message_text"/>
    <Button
            android:id="@+id/submit_intense_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_sms"/>
    <Button
            android:id="@+id/submit_intense_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"/>
    <Button
            android:id="@+id/submit_intense_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode_text"/>
</LinearLayout>